--- a/scss/layout/_cursor.scss
+++ b/scss/layout/_cursor.scss
@@ -1,5 +1,6 @@
 .follow {
-    position: absolute;
+  /* Use fixed so the dot stays relative to the viewport during scroll */
+  position: fixed;
     left: 0;
     top: 0;
     width: 10px;
